# multiqc-foundation-gate

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore  README.md  feature_sample_ids.txt  features.npy  labels.csv  manifest.yaml
data/multiqc_reports/: .gitignore
data/multiqc_reports/SRR1039513/multiqc_data/: fastqc_adapter_content_plot.txt  fastqc_per_base_n_content_plot.txt  fastqc_per_sequence_gc_content_plot_Percentages.txt  fastqc_per_sequence_quality_scores_plot.txt  fastqc_sequence_counts_plot.txt  multiqc_data.json
data/multiqc_reports/SRR1039513_adapter/multiqc_data/: fastqc-status-check-heatmap.txt  fastqc_adapter_content_plot.txt  fastqc_per_base_n_content_plot.txt  fastqc_per_base_sequence_quality_plot.txt  fastqc_per_sequence_gc_content_plot_Counts.txt  fastqc_per_sequence_gc_content_plot_Percentages.txt  fastqc_per_sequence_quality_scores_plot.txt  fastqc_sequence_counts_plot.txt  fastqc_sequence_duplication_levels_plot.txt  llms-full.txt  (+5 more)
docs/: architecture.md  tooling-versions.md  what-is-out-of-scope.md
docs/release-notes/: v0.1.md
scripts/: README.md  check_english_only.py  run_lab.sh  run_phase_c.py
src/bioscaffold/: __init__.py  canary.py  pipeline.py
src/multiqc_gate/: __init__.py  audit.py  augment.py  baseline.py  canary.py  drift.py  eval.py  features.py  labels.py  model.py  pipeline.py  train.py
tests/: test_augment.py  test_baseline.py  test_canary.py  test_drift.py  test_eval.py  test_features.py  test_labels.py  test_model.py  test_pipeline.py  test_train.py
tests/fixtures/: canary.json
(+588 files in other folders)
