[project]
name = "bioscaffold"
version = "0.1.0"
description = "Capability-portrait scaffold for bioinformatics R&D repos."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "H. Ryan Kim" },
]
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "mlflow>=2.11.0",
    "ipykernel>=6.29.0",
    "nbconvert>=7.16.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
bioscaffold = "bioscaffold.pipeline:cli"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bioscaffold"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
